@@ -1,3 +1,7 @@
+2007-04-08  Dmitry Galinsky  <dima.exe@gmail.com>
+
+	* rails-speedbar-feature.el (rails-speedbar:roots): created
+
 2007-04-06  Dmitry Galinsky  <dima.exe@gmail.com>
 
 	* rails-lib.el (capital-word-p): better word comparsion
